# sql-report-template

./: .gitignore  README.md  environment.yml  example_config.py  main.py  pyproject.toml
graph_package/: __init__.py
report_config/: intro_text.txt  user_config.yaml
report_generator/: __init__.py  excel_report_generator.py  query_runner.py
src/sql_reporter/: __init__.py  cli.py  config_utils.py  main.py
src/sql_reporter/report_generator/: __init__.py  query_runner.py
working_queries/: sheet1.sql  sheet2.sql
