[project]
name = "sql-report-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.0",
    "excel-report-maker",
    "lightoracle",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
]

[project.scripts]
sql-reporter = "sql_reporter:sql_reporter"  

[tool.uv.sources]
excel-report-maker = { git = "https://github.com/GSU-Analytics/excel-report-maker.git" }
lightoracle = { git = "https://github.com/GSU-Analytics/light_conn.git" }
