[project]
name = "sql-report-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "excel-report-maker",
    "lightoracle @ git+https://github.com/GSU-Analytics/light_conn",
    "click>=8.2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
]

[project.scripts]
sql-reporter = "sql_reporter.cli:sql_reporter"  

[tool.uv.sources]
lightoracle = { git = "https://github.com/GSU-Analytics/light_conn.git" }
excel-report-maker = { git = "https://github.com/GSU-Analytics/excel-report-maker.git", rev = "v0.2.0" }
